Реализованы методы для работы с несколькими локациями в handler и  контроллер, проходящие тесты (green). Обновлены swagger файлы
