# controllers/weather.go
@@ -3,7 +3,7 @@
 import (
 	"clients"
 	weather "models/weather"
-
+	"sync"
 	"github.com/shopspring/decimal"
 )
 
@@ -38,6 +38,26 @@ func (c *CurrentWeatherController[T]) GetForecast(lat decimal.Decimal, lon decim
 }
 
 func (c *CurrentWeatherController[T]) GetMultipleCurrentWeather(locations []weather.Location) []weather.LocationWeather {
-	// Заглушка для RED стадии
-	return []weather.LocationWeather{}
+	results := make([]weather.LocationWeather, len(locations))
+	var wg sync.WaitGroup
+
+	for i, loc := range locations {
+		wg.Add(1)
+		go func(idx int, location weather.Location) {
+			defer wg.Done()
+
+			results[idx].Lat = location.Lat
+			results[idx].Lon = location.Lon
+
+			temp, err := c.Client.LocationCurrentTemperature(location.Lat, location.Lon)
+			if err != nil {
+				results[idx].Error = err.Error()
+			} else {
+				results[idx].Temperature = temp
+			}
+		}(i, loc)
+	}
+
+	wg.Wait()
+	return results
 }
